tests/transpiler/x/scala/group_by_conditional_sum.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/group_by_conditional_sum.scala:5: error: identifier expected but ':' found.
    case class Item(cat: String, val: Int, flag: Boolean)
                                    ^
/workspace/mochi/tests/transpiler/x/scala/group_by_conditional_sum.scala:8: error: Missing closing brace `}' assumed here
    println(result)
    ^
/workspace/mochi/tests/transpiler/x/scala/group_by_conditional_sum.scala:9: error: ':' expected but '}' found.
  }
  ^
three errors found
