tests/transpiler/x/scala/group_by_conditional_sum.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:41:12 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def main(args: Array[String]): Unit = {
    case class Item(cat: String, val: Int, flag: Boolean)
    val items: ArrayBuffer[Item] = ArrayBuffer(Item("a", 10, true), Item("a", 5, false), Item("b", 20, true))
    val result: ArrayBuffer[Map[String,Any]] = ({ var _groups = Map[Any, Map[String, Any]]() ; var _tmp = ArrayBuffer[(Any,Map[String,Any])]() ; var _res = ArrayBuffer[Map[String,Any]]() ; for (i <- items) { val _key = i.cat ; val _g = _groups.getOrElseUpdate(_key, Map("key" -> _key, "items" -> ArrayBuffer[Any]())) ; _g("items").asInstanceOf[ArrayBuffer[Any]].append(i) for (g <- _groups.values) { _tmp.append((g("key"), Map("cat" -> g("key"), "share" -> ({ var _res = ArrayBuffer[Any]() ; for (x <- g) { _res.append(if (x.flag) x.val else 0) }; _res }).sum / ({ var _res = ArrayBuffer[Any]() ; for (x <- g) { _res.append(x.val) }; _res }).sum))) } ; _res = _tmp.sortBy(_._1).map(_._2) ; _res })
    println(result)
  }
}
